<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_in"
            android:icon="@drawable/sign_in"
            android:title="@string/sign_in" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/series"
            android:title="@string/series" />
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/characters"
            android:title="@string/characters" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/search" />
    </group>
</menu>
