<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="java.util.List" />

        <import type="com.project.djoum.discovercomics.model.comics.Item" />

        <variable
            name="comic"
            type="com.project.djoum.discovercomics.model.comics.Comics" />

        <variable
            name="items"
            type="List&lt;Item>" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragment.ComicDetailsFragment">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/comic_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@{comic.title}"
                    app:imageUrl="@{comic.getThumbnail().toString()}" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/image_scrim" />

                <TextView
                    android:id="@+id/comic_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="20dp"
                    android:text="@{comic.title}"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="@string/sample_text" />
            </FrameLayout>

            <TextView
                android:id="@+id/comic_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:paddingLeft="@dimen/text_margin"
                android:paddingRight="@dimen/text_margin"
                android:text="@{comic.description}"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/description_title"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toEndOf="@+id/description_title"
                app:layout_constraintTop_toBottomOf="@+id/description_title"
                tools:text="@string/sample_text" />

            <TextView
                android:id="@+id/description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/comic_descripition"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/comic_creator_list"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:paddingLeft="@dimen/text_margin"
                android:paddingRight="@dimen/text_margin"
                app:creatorList="@{items}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creator_title" />

            <TextView
                android:id="@+id/creator_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:paddingLeft="@dimen/text_margin"
                android:paddingRight="@dimen/text_margin"
                android:text="@string/creator"
                android:textAppearance="?android:attr/textAppearanceLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comic_description" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</layout>